<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="about_summary" formatted="false"><![CDATA[Thank you for using \'Read Zhihu\']]></string>
    <string name="affectRows">New %d mQuestions.</string>
    <string name="analytics">Enable Analytics</string>
    <string name="analytics_summary" formatted="false">
        <![CDATA[Help make \'Read Zhihu\' better by opting into anonymous statistics.]]>
    </string>
    <string name="app_name">Read Zhihu</string>
    <string name="appearance">Appearance</string>
    <string name="author_email">lucky@gracecode.com</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="auto_scroll_summary">Scroll to location which has last readed.</string>
    <string name="browser">Browser</string>
    <string name="caches">Caches</string>
    <string name="cancel_mark_as_stared">Unstarred</string>
    <string name="choose_email_client">Choose An Email Client</string>
    <string name="clear_caches">Clear Image Caches</string>
    <string name="clear_caches_summary" formatted="false">Total cached %d images which contains %.1fMB.</string>
    <string name="colon">:</string>
    <string name="database_faild">Oh~! Failed to write data x_x.</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Please me a cup of coffee :^)</string>
    <string name="download_when_wifi_avaiable">Download and cache images when Wi-fi is connected.</string>
    <string name="downloaded_offline_image_complete" formatted="false">Downloaded and cached %d images</string>
    <string name="downloading_offline_image">Downloading images...</string>
    <string name="enable_cache">Enable Offline Images</string>
    <string name="enable_cache_summary">Cache images for offline use.</string>
    <string name="favorite">Favorite</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_summary">Have comments or suggestions?</string>
    <string name="feedback_title" formatted="false">Feedback for \'%s\' %s</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_summary">Select your favourite font size for read.</string>
    <string name="huge">Huge</string>
    <string name="large">Large</string>
    <string name="loaded_more_data">Loading more mQuestions</string>
    <string name="loading">Loading, Please Wait...</string>
    <string name="mark_as_starred">Starred</string>
    <string name="medium">Medium</string>
    <string name="network_error">Network ERROR, Check your internet connection.</string>
    <string name="notfound">Sorry, That items is not found.</string>
    <string name="only_wifi_cache">Wi-fi Only</string>
    <string name="only_wifi_cache_summary">Cache images when Wi-fi is connected.</string>
    <string name="paragraph_indents">Paragraph Indentation</string>
    <string name="paragraph_summary">Indents one characters on each paragraph.</string>
    <string name="preference">Preference</string>
    <string name="read">Read</string>
    <string name="really_clear_cache">Are you sure? All images will re-download when its needed again.</string>
    <string name="rebuild_ui_faild">Sorry, Some shits happened.</string>
    <string name="refersh">Refersh</string>
    <string name="scroll_read">Filp Read</string>
    <string name="scroll_read_summary">Filp left/right to read previous or next one.</string>
    <string name="share">Share</string>
    <string name="share_and_save"><![CDATA[Save Thumbnails]]></string>
    <string name="share_and_save_summary">
        <![CDATA[Save thumbnails to your SD card\'s <Picture> directory when you shared.]]></string>
    <string name="share_plain_only">Plain Text Only</string>
    <string name="share_plain_only_summary">Share with plain text only(Do not generate thumbnails).</string>
    <string name="small">Small</string>
    <string name="tab_index">Main</string>
    <string name="tab_stared">Favorite</string>
    <string name="tiny">Tiny</string>
    <string name="tradition_symbol">Tradition Symbol</string>
    <string name="tradition_symbol_summary">Use tradition Chinese symbol for read.</string>
    <string name="version">Version</string>
    <string name="version_tail">Version:</string>
    <string name="view_at_zhihu">View At Client</string>
    <string name="wakelock_screen">Lock Screen</string>
    <string name="wakelock_screen_summary">Screen always on while reading.</string>
    <string name="key_traditional_chinese">key_traditional_chinese</string>
    <string name="traditional_chinese">Traditional Chinese</string>
    <string name="traditional_chinese_summary">Convert all characters to Traditional Chinese</string>
    <string name="nomore_questions">No more items</string>
    <string name="share_template" formatted="false">%s %s, Share By #%s#</string>
    <string name="no_newer_questions">No Newer Questions</string>
    <string name="custom_fonts_enabled">Use Custom Fonts</string>
    <string name="custom_fonts_summary">Read the text though your favourite fonts.</string>
    <string name="custom_fonts">Main Custom Fonts</string>


    <string name="custom_fonts_bold">Custom Bold Font</string>
    <string name="not_set_yet">Not setted yet</string>
    <string name="comment">Comments</string>
    <string name="zhihu_not_intstalled">\"Zhihu\" Android Client Not Installed.</string>
    <string name="view_at_online">View Online</string>
    <string name="search_hint">Input search key</string>
    <string name="search">Search</string>
    <string name="turning_page_by_volkey">Volume Key</string>
    <string name="turning_page_by_volkey_summary">Turning Page(Up or Down) By Volume Key</string>
    <string name="save_favourites_ok">Saved favourites to server.</string>
    <string name="sync">Sync</string>
    <string name="key_sync_enabled">key_sync_enabled</string>
    <string name="sync_summary">Sync your favourited items to service.</string>
    <string name="key_sync_notify_enabled">key_sync_notify_enabled</string>
    <string name="sync_notify">Notify Everytimes</string>
    <string name="sync_notify_summary">Nofity the sync results on everytime.</string>
    <string name="sync_favourite">Sync Favourite Items</string>
    <string name="key_backup_sync">key_backup_sync</string>
    <string name="key_restore_sync">key_restore_sync</string>
    <string name="backup_favourite">Backup Favourites</string>
    <string name="restore_favourite">Restore Favourites</string>
    <string name="backup_favourite_summary">Backup your favourites to clouds.</string>
    <string name="restore_favourite_summary">Restore your favourites from clouds.</string>
    <string name="syncd_message">Synced %d items form could.</string>
    <string name="get_favourites_faild">Get favourites faild.</string>
    <string name="do_u_sure">Do you sure?</string>
    <string name="save_favourites_conform">This will overwrite the previously saved data, sure?</string>
    <string name="favourites_is_empty">Your favourites list is empty.</string>
</resources>
